tests/error/print.tpc
int main (void) {
	int * ife ;/*dsq
sdq*/ife(i==0){
		print(4);
	}
	i = &i;
	while(i!=1){
		i=i+1;
	}
	print(i);
	return 0;
}